--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ repositories {
 }
 
 dependencies {
+	compile group: 'org.bouncycastle', name: 'bcprov-jdk16', version: '1.46'
+
+//	implementation 'org.bouncycastle:bcprov-jdk16'
 	implementation 'com.google.code.gson:gson'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
